--- a/contact.html
+++ b/contact.html
@@ -8,8 +8,8 @@
     <h3>Contact Information</h3>
     <address>
       Khayrul Shahril <br>
-      <a href="mailto:khayrulshahril@syntaxlabresources.com">📞khayrulshahril@syntaxlabresources.com</a> <br>
-      <a href="tel:+60124795658">📧(60)12479 5658</a>
+      <a href="mailto:khayrulshahril@syntaxlabresources.com">📧khayrulshahril@syntaxlabresources.com</a> <br>
+      <a href="tel:+60124795658">📞(60)12479 5658</a>
     </address>
     <br>
     <hr>
