--- a/contact.html
+++ b/contact.html
@@ -8,12 +8,12 @@
     <h3>Contact Information</h3>
     <address>
       Khayrul Shahril <br>
-      <a href="mailto:khayrulshahril@syntaxlabresources.com">📧khayrul.shahril84@gmail.com</a> <br>
+      <a href="mailto:khayrul.shahril84@gmail.com">📧khayrul.shahril84@gmail.com</a> <br>
       <a href="tel:+60124795658">📞(60)12479 5658</a>
     </address>
     <br>
     <hr>
-    <form action="mailto:khayrulshahril@syntaxlabresources.com" method="post" enctype="text/plain">
+    <form action="mailto:khayrul.shahril84@gmail.com" method="post" enctype="text/plain">
       <label>Your Name:</label>
       <input type="text" name="yourName" value=""><br>
       <label for="yourEmail">Your Email:</label>
